force-app/main/default/objects/WebServiceSetting__mdt/WebServiceSetting__mdt.object-meta.xml
<CustomObject>
    <label>WebServiceSetting</label>
    <pluralLabel>WebServiceSettings</pluralLabel>
</CustomObject>