force-app/main/default/objects/WebServiceSetting__mdt/fields/Retry__c.field-meta.xml
<CustomField>
    <fullName>Retry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retry</label>
    <type>Checkbox</type>
</CustomField>