force-app/main/default/objects/WebServiceSetting__mdt/fields/Retry_Interval_Mins__c.field-meta.xml
<CustomField>
    <fullName>Retry_Interval_Mins__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Retry Interval Mins</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>