force-app/main/default/objects/WebServiceSetting__mdt/fields/URI__c.field-meta.xml
<CustomField>
    <fullName>URI__c</fullName>
    <label>URI</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>