force-app/main/default/objects/WebServiceSetting__mdt/validationRules/Retry_Interval.validationRule-meta.xml
<ValidationRule>
    <fullName>Retry_Interval</fullName>
    <active>true</active>
    <description>Must have retry interval if you have retry</description>
    <errorConditionFormula>Retry__c == null &amp;&amp; Retry_Interval_Mins__c == null</errorConditionFormula>
    <errorMessage>Must define retry interval if you have a retry</errorMessage>
</ValidationRule>