force-app/main/default/objects/WebServiceSetting__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Retry__c</columns>
    <columns>Retry_Interval_Mins__c</columns>
    <columns>URI__c</columns>
    <columns>Verb__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>